# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: checking-correctness.yml  Сhecking-correctness.yml
difference_calculator/scripts/: gendiff.py
gendiff/: __init__.py  differences.py  generate_diff.py  parser.py  plain.py  stylish_formatter.py
gendiff/formatters/: plain_formatter.py  stylish_formatter.py
gendiff/scripts/: gendiff.py
tests/: test_differences.py  test_generate_diff.py  test_parser.py  test_plain.py  test_plain_formatter.py  test_stylish.py  test_stylish_formatter.py
tests/fixtures/: json_result.json
