[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Faizik12 <zerg9119@gmail.com>"]
readme = "README.md"
packages = [{include = "difference_calculator"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "difference_calculator.scripts.gendiff:main"